--- a/src/django-backend/pyproject.toml
+++ b/src/django-backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "opentelemetry-instrumentation-psycopg2>=0.48b0",
     "opentelemetry-instrumentation-sqlite3>=0.48b0",
     "python-json-logger>=4.0.0",
+    "django-tasks-db>=0.12",
 ]
 
 [project.optional-dependencies]
