Convert public pages to server-side rendering with ISR

--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -25,7 +25,8 @@
     "react-markdown": "^10.1.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
